# LikeRedis

./: CMakeLists.txt  LIkeRedisClient.cpp  LikeRedisServer.cpp
Protocols/: LRClient.cpp  LRClient.h  LRServer.cpp  LRServer.h
Protocols/Helpers/: TCPHelpers.cpp  TCPHelpers.h
Protocols/TCP/: TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h
System/: EventLoop.cpp  EventLoop.h
